--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="assets/main.css">
   <body>
     
-<div class="text-1">It was its own thrill. I didn’t ignore them, I read them, even if only silently, with a deep sense of feeling: both the feeling of being replete, a feeling of satisfaction, and the feeling of loss, the sadness of having finished the book. 
+<div class="text-1">It was its own thrill. I didn’t ignore them, I read them, even if only silently, with a deep sense of feeling: both the feeling of being replete, a feeling of satisfaction, and the feeling of loss, the sadness of having finished the book.</div>
 
 
 
@@ -21,7 +21,7 @@
 Gaston Bachelard says the single most succinct and astonishing thing: We begin in admiration and we end by organizing our disappointment. The moment of admiration is the experience of something unfiltered, vital and fresh—it could also be horror—and the moment of organization is both the onset of disappointment and its dignification; the least we can do is dignify our knowingness, the loss of some vitality through familiarization, by admiring not the thing itself but how we can organize it, think about it.</div>
 
     
-    <a href="https://docs.google.com/document/d/1GYPFCkXpg2Ia97ltKRxgGgWWeIJBB6n5xSnGkiAVZpQ/edit" class="background"></a>
+    <a href="https://rachelyjpark.github.io/OB-6/" class="background"></a>
   </body> 
 </html>
 </html>
